Added CI/CD Pipeline

--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "eslint .",
-    "start": "next start"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "test": "echo \"No tests specified yet\" && exit 0",
+    "test:watch": "echo \"No tests specified yet\" && exit 0",
+    "start": "next start",
+    "analyze": "cross-env ANALYZE=true next build",
+    "clean": "rimraf .next out"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -68,7 +74,9 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^7.0.3",
     "postcss": "^8.5",
+    "rimraf": "^5.0.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5.9.3"
